@@ -2,15 +2,16 @@ name     = Mojito
 abstract = Web Document System
 copyright_holder = Mateu X. Hunter
 copyright_year   = 2011
+version = 0.16
 
-[PruneFiles]
-filename = lib/Mojito/conf/mojito_local.conf
+;[PruneFiles]
+;filename = lib/Mojito/conf/mojito_local.conf
 
-[Git::NextVersion]
-[PkgVersion]
-[NextRelease]
+;[Git::NextVersion]
+;[PkgVersion]
+;[NextRelease]
 
-[@Git]
+;[@Git]
 
 [@Basic]
 
@@ -21,9 +22,9 @@ filename = lib/Mojito/conf/mojito_local.conf
 
 ;[@TestingMania]
 ;skip = KwaliteeTests, PortabilityTests, EOLTests, PodCoverageTests, DistManifestTests
-[@TestingMania]
-disable = Test::Kwalitee, EOLTests, Test::DistManifest, Test::Portability, PodCoverageTests
+;[@TestingMania]
+;disable = Test::Kwalitee, EOLTests, Test::DistManifest, Test::Portability, PodCoverageTests
 
-[AutoPrereqs]
-skip = ^Fixture
+;[AutoPrereqs]
+;skip = ^Fixture
 
