@@ -78,7 +78,7 @@ Show the synopses of the CPAN recent releases
 sub cpan_recent_synopses {
     my ($self, $content) = @_;
     return if !$content;
-    $content =~ s/{{\s*cpan.synopses.recent\s*(\d+)\s*}}/$self->metacpan->get_recent_synopses($1)/esig;
+    $content =~ s/{{cpan.synopses.recent\s*(\d+)}}/$self->metacpan->get_recent_synopses($1)/esig;
     return $content;
 }
 =head2 metacpan_module_URL
