@@ -9,7 +9,7 @@ has 'doc' => (
     is => 'ro',
     lazy => 1,
     writer => '_set_doc',
-    handles =>  [ qw( get_most_recent_docs get_feed_docs get_collections get_collection_pages) ],
+    handles =>  [ qw( get_most_recent_docs get_feed_docs get_collections get_collection_pages get_docs_for_month) ],
 );
 
 sub BUILD {
